--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@types/lodash.groupby": "^4.6.4",
     "@types/node": "^8.0.7",
-    "@types/react": "15.0.21",
+    "@types/react": "^16.7.18",
     "@types/react-dom": "0.14.23",
     "gatsby": "^1.9.119",
     "gatsby-link": "^1.6.28",
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
     "lodash.groupby": "^4.6.0",
+    "react": "^16.7.0",
     "react-particles-js": "^2.3.0"
   },
   "keywords": [
