--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.1",
   "author": "Kevin Olivera <kevin.oliveira@live.com>",
   "dependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/lodash.groupby": "^4.6.4",
     "@types/node": "^8.0.7",
     "@types/react": "^16.7.18",
     "@types/react-dom": "0.14.23",
+    "classnames": "^2.2.6",
     "gatsby": "^1.9.119",
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-favicon": "2.1.1",
