--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "version": "0.0.1",
   "author": "Kevin Olivera <kevin.oliveira@live.com>",
   "dependencies": {
-    "@types/classnames": "^2.2.6",
-    "@types/lodash.groupby": "^4.6.4",
+    "@types/classnames": "^2.2.9",
+    "@types/lodash.groupby": "^4.6.6",
     "@types/node": "^8.0.7",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "0.14.23",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
     "classnames": "^2.2.6",
-    "gatsby": "^1.9.119",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-favicon": "2.1.1",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby": "^2.13.50",
+    "gatsby-link": "^2.2.4",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-feed": "^2.3.6",
+    "gatsby-plugin-feed-generator": "^2.0.3",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sass": "^2.1.4",
     "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-plugin-typescript": "^1.4.10",
-    "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-remark": "^1.7.44",
+    "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-source-rss": "^1.0.0",
+    "gatsby-source-rss-feed": "^1.1.1",
+    "gatsby-transformer-remark": "^2.6.10",
     "github-markdown-css": "^3.0.1",
     "lodash.groupby": "^4.6.0",
-    "react": "^16.7.0",
+    "node-sass": "^4.12.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-particles-js": "^2.3.0"
   },
   "keywords": [
