--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-feed": "^2.3.6",
     "gatsby-plugin-feed-generator": "^2.0.3",
+    "gatsby-plugin-layout": "^1.1.2",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.4",
     "gatsby-plugin-styled-components": "^2.0.11",
