--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "classnames": "^2.2.6",
-    "gatsby": "^2.13.50",
+    "gatsby": "^2.17.15",
     "gatsby-link": "^2.2.4",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-feed": "^2.3.6",
@@ -29,8 +29,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-particles-js": "^2.3.0"
+    "react-helmet": "^5.2.1"
   },
   "keywords": [
     "gatsby, typescript"
