--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-	"editor.formatOnSave": true
+	"editor.formatOnSave": true,
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"liveServer.settings.root": "output/",
+	"liveServer.settings.port": 6660,
+	"liveServer.settings.fullReload": true
 }
