--- a/package.json
+++ b/package.json
@@ -1,53 +1,33 @@
 {
-  "name": "kevin_0liveira_blog",
-  "description": "Kevin Oliveira blog",
-  "version": "0.0.1",
-  "author": "Kevin Olivera <kevin.oliveira@live.com>",
+  "name": "kevinoliveira.github.io",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "@types/classnames": "^2.2.9",
-    "@types/lodash.groupby": "^4.6.6",
-    "@types/node": "^8.0.7",
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.8.5",
-    "classnames": "^2.2.6",
-    "gatsby": "^2.17.15",
-    "gatsby-link": "^2.2.4",
-    "gatsby-plugin-favicon": "^3.1.6",
-    "gatsby-plugin-feed": "^2.3.6",
-    "gatsby-plugin-feed-generator": "^2.0.3",
-    "gatsby-plugin-layout": "^1.1.2",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sass": "^2.1.4",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-source-filesystem": "^2.1.8",
-    "gatsby-source-rss": "^1.0.0",
-    "gatsby-source-rss-feed": "^1.1.1",
-    "gatsby-transformer-remark": "^2.6.10",
-    "github-markdown-css": "^3.0.1",
-    "lodash.groupby": "^4.6.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "@types/node": "^14.0.11",
+    "@types/node-sass": "^4.11.1",
+    "@types/nunjucks": "^3.1.3",
+    "node-sass": "^4.14.1",
+    "nunjucks": "^3.2.1",
+    "onchange": "^7.0.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5",
+    "typescript-deno-plugin": "^1.31.0"
   },
-  "keywords": [
-    "gatsby, typescript"
-  ],
-  "license": "MIT",
-  "main": "n/a",
+  "devDependencies": {},
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0",
-    "format": "prettier --parser typescript --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.ts*\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "do": "ts-node src/main.ts",
+    "dev": "onchange 'layouts/**/*.njk' 'styles/**/*.scss' -- ts-node src/main.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "gh-pages": "^1.2.0",
-    "prettier": "^1.14.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kevinoliveira/kevinoliveira.github.io.git"
   },
-  "contributors": [
-    "kevin oliveira <kevin.oliveira@live.com>"
-  ]
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kevinoliveira/kevinoliveira.github.io/issues"
+  },
+  "homepage": "https://github.com/kevinoliveira/kevinoliveira.github.io#readme"
 }
