--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,20 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "esnext",
-    "jsx": "react",
-    "lib": ["dom", "es2015", "es2017"]
-  },
-  "include": ["./src/**/*"]
+    "compilerOptions": {
+        "outDir": "dist",
+        "module": "commonjs",
+        "target": "es2019",
+        "esModuleInterop": true,
+        "sourceMap": true,
+        "rootDir": "src",
+        "baseUrl": "src",
+        "paths": {
+            "@/*": [
+                "*"
+            ]
+        }
+    },
+    "include": [
+        "src"
+    ],
+    "exclude": []
 }
