--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/marked": "^0.7.4",
     "@types/node": "^14.0.11",
     "@types/node-sass": "^4.11.1",
     "@types/nunjucks": "^3.1.3",
+    "frontmatter": "0.0.3",
+    "fs-jetpack": "^2.4.0",
+    "marked": "^1.1.0",
     "node-sass": "^4.14.1",
     "nunjucks": "^3.2.1",
     "onchange": "^7.0.2",
@@ -17,7 +21,7 @@
   "devDependencies": {},
   "scripts": {
     "do": "ts-node src/main.ts",
-    "dev": "onchange 'layouts/**/*.njk' 'styles/**/*.scss' -- ts-node src/main.ts",
+    "dev": "onchange 'src/**/*.ts' 'layouts/**/*.njk' 'styles/**/*.scss' -- ts-node src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
